refactor - fix Sonar warnings